fix(checkout): CHECKOUT-7047 Unable to scroll Cart Summary on Mobile (#1148)
* fix(checkout): CHECKOUT-7047 Unable to scroll Cart Summary on Mobile

* fix(checkout): CHECKOUT-7047 Fix embedded checkout

--- a/packages/core/src/scss/components/foundation/modal/_modal.scss
+++ b/packages/core/src/scss/components/foundation/modal/_modal.scss
@@ -170,3 +170,15 @@
     display: block;
     visibility: visible;
 }
+
+// Specific styles for displaying cart summary on mobile
+body.has-activeModal {
+    .modal-body {
+        overflow: scroll;
+        padding-bottom: 20%; // This is to fill the space occupied by Safari and Chrome's navigation bar on mobile
+
+        @include breakpoint("small") {
+            padding-bottom: 0;
+        }
+    }
+}
